--- a/views/layouts/landing.handlebars
+++ b/views/layouts/landing.handlebars
@@ -27,7 +27,7 @@
         </li>
          <li>
           <li>
-          <a href="/users/login" class=>Login</a>
+          <a href="/login" class=>Login</a>
         </li>
         <li>
           <a href="/gigs/add">Add Gig</a>
