--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
         </li>
         <li>
           <li>
-          <a href="/gigs/login">Login</a>
+          <a href="/login">Login</a>
         </li>
         <li>
           <a href="/gigs/add">Add Gig</a>
