--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -4,8 +4,7 @@
       <h1 class="text-center mb-3">
         <i class="fas fa-user-plus"></i> Register
       </h1>
-      <% include ./partials/messages %>
-      <form action="/users/register" method="POST">
+      <form action="/register" method="POST">
         <div class="form-group">
           <label for="name">Name</label>
           <input
@@ -14,7 +13,6 @@
             name="name"
             class="form-control"
             placeholder="Enter Name"
-            value="<%= typeof name != 'undefined' ? name : '' %>"
           />
         </div>
         <div class="form-group">
@@ -25,7 +23,6 @@
             name="email"
             class="form-control"
             placeholder="Enter Email"
-            value="<%= typeof email != 'undefined' ? email : '' %>"
           />
         </div>
         <div class="form-group">
@@ -36,7 +33,6 @@
             name="password"
             class="form-control"
             placeholder="Create Password"
-            value="<%= typeof password != 'undefined' ? password : '' %>"
           />
         </div>
         <div class="form-group">
@@ -47,14 +43,13 @@
             name="password2"
             class="form-control"
             placeholder="Confirm Password"
-            value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
           />
         </div>
         <button type="submit" class="btn btn-primary btn-block">
           Register
         </button>
       </form>
-      <p class="lead mt-4">Have An Account? <a href="/users/login">Login</a></p>
+      <p class="lead mt-4">Have An Account? <a href="/login">Login</a></p>
     </div>
   </div>
 </div>
